ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress  
metadata:  
  name: example-service-ingress 
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1
 
spec:
  tls:
    - hosts:
      - cat.example.com
      - nodered.exmpale.com
      - grafana.example.com
      secretName: letsencrypt-prod
  rules:
    - host: grafana.example.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
   
            backend:
   
              service:
   
                name: grafana
   
                port:
   
                  number: 80
    - host: nodered.example.com
   
      http:
   
        paths:
   
          - path: /(.*)
            pathType: Prefix
   
            backend:
   
              service:
   
                name: nodered-node-red
   
                port:
   
                  number: 1880
   
    - host: cat.example.com
   
      http:
   
        paths:
   
          - path: /(.*)
            pathType: Prefix
   
            backend:
   
              service:
   
                name: service_1
   
                port:
   
                  number: 8080
                  
 
                  
          - path: /web/(.*)
            pathType: Prefix
   
            backend:
 
              service:
   
                name: service_2
   
                port:
   
                  number: 8002
                  
          - path: /alarm/(.*)
            pathType: Prefix
   
            backend:
   
              service:
   
                name: service_3
   
                port:
   
                  number: 8003
                  
          - path: /tag/(.*)
            pathType: Prefix
   
            backend:
   
              service:
   
                name: service_4
   
                port:
   
                  number: 8004
                  
          - path: /history/(.*)
            pathType: Prefix
   
            backend:
   
              service:
   
                name: service_5
   
                port:
   
                  number: 8005  

  ingressClassName: nginx
